--- a/index.html
+++ b/index.html
@@ -82,8 +82,9 @@
         <div class="footer-list">
             <ul>
                 <p>自分の持っているコレクション(現物でもデータでも！)をこのサイトに書き込んで整理してみようxD</p>
-                <br>●追加ボタン・・・テキストボックスに入力されたコレクション名を１から順番に追加します
-                <br>●削除ボタン・・・コレクションを下から順番に消していきます
+                <br>●追加ボタン・・・・テキストボックスに入力されたコレクション名を１から順番に追加します
+                <br>●削除ボタン・・・・コレクションを下から順番に消していきます
+                <br>●全削除ボタン・・・入力されたすべての情報を削除します
             </ul>
         </div>
     </div>
